# local-ml-platform

./: CHANGELOG.md  pyproject.toml
0-bootstrap/: Makefile  kind-config.yaml  minikube-setup.sh  podman-setup.sh  readme.md
1-core-services/ingress-nginx/: readme.md
1-core-services/minio/: ingress.yaml  readme.md  values.yaml
2-ml-platform/kubeflow-pipelines/: Makefile  ingress.yaml  kustomization.yaml  readme.md
2-ml-platform/mlflow/: ingress-mlflow.yaml  postgres.yaml  readme.md  values.yaml
