[project]
name = "local-ml-platform"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "commitizen>=4.10.0",
    "cz-conventional-gitmoji>=0.7.0",
]

[dependency-groups]
dev = [
    "cz-conventional-gitmoji>=0.7.0",
]

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
